navbar overflow fixed

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     padding: 10px 3rem;
     align-items: center;
     position: relative;
+    overflow-x: hidden;
 
 }
 .toggle__icons{
